--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
 </head>
 <body>
     
+
+
+
+
+
+
+
+
+
+
+    <script src = "christmas.js"></script> 
+    <script src = "jquery.js"></script> 
 </body>
 </html>
